name:                tag
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://tag-lang.org/hasktag
license:             BSD3
license-file:        LICENSE
author:              Claudio Nicoli Pannacci
maintainer:          claudio.pannacci@protonmail.com
copyright:           2022 Claudio Nicoli Pannacci
category:            Programming Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tag
  hs-source-dirs:      src
  main-is:             Tag.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
